--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,9 +68,8 @@
 
 			<div class="legal-line">
 				<p class="container">
-					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }}
-					&bull;
-					Template by <a href="https://cloudcannon.com/">CloudCannon</a>
+					2016-{{ site.time | date: '%Y' }} &nbsp; Technicolor俱乐部 &nbsp; 
+					
 				</p>
 			</div>
 		</footer>
